removed hash routing

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,13 +12,18 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
+        # Handle static files with case-insensitive matching
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|pdf|m4a|JPG|JPEG|PNG|GIF)$ {
+            try_files $uri $uri/ =404;
+        }
+
         # Handle all routes - serve index.html for SPA routing
         location / {
             try_files $uri $uri/ /index.html;
         }
 
-        # Cache static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|pdf|m4a)$ {
+        # Cache static assets (case-insensitive)
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|pdf|m4a|JPG|JPEG|PNG|GIF)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
