--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,12 @@
-version: "3.7"
 services:
   portfolio:
     build: .
     container_name: portfolio_app
-    ports:
-      - "3000:80"
+    networks:
+      - shared_network
+    restart: unless-stopped
+
+networks:
+  shared_network:
+    name: shared_network
+    external: true
