--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@ services:
   portfolio:
     build: .
     container_name: portfolio_app
+    ports:
+      - "3000:80"
     networks:
       - shared_network
     restart: unless-stopped
